--- a/index.html
+++ b/index.html
@@ -10,9 +10,28 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <link
+      rel="stylesheet"
+      href="./css/style.css"
+    />
     <title>FIRST-UNIQUE-CHAR</title>
   </head>
   <body>
+    <div class="container">
+      <h1>FIRST-UNIQUE-CHAR</h1>
+      <form>
+        <p
+          >Type into the field some text where you want to find first unique
+          char:</p
+        >
+        <textarea placeholder="Enter text"></textarea>
+
+        <button type="submit">Find char</button>
+      </form>
+      <div class="out"></div>
+    </div>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
+<!-- C makes it easy for you to shoot yourself in the foot. C++ makes that harder, but when you do, it blows away your whole leg. (с) Bjarne Stroustrup -->
